--- a/style.css
+++ b/style.css
@@ -516,8 +516,8 @@ h1, h2, h3, h4, h5, h6 { color: #000; font-weight: 300; -ms-word-wrap: break-wor
 .pad { padding: 30px 50px; }
 
 /* boxed */
-body.boxed { background: #ddd; }
-.boxed #wrapper { background: #fff; max-width: 1200px; margin: 0 auto; box-shadow: 0 0 3px rgba(0,0,0,0.2); }
+body.boxed {  }
+.boxed #wrapper { max-width: 1200px; margin: 0 auto; }
 
 /*  base : layout columns
 /* ------------------------------------ */
@@ -529,7 +529,7 @@ body.boxed { background: #ddd; }
 
 /* 2 column, content right */
 .col-2cr #header { order: 1; }
-.col-2cr .s2 { order: 3; border-left: 1px solid #eee; }
+.col-2cr .s2 { order: 0; border-right: 1px solid #eee; }
 .col-2cr .main { order: 2; }
 
 /*  base : sidebar
@@ -538,7 +538,7 @@ body.boxed { background: #ddd; }
 .sidebar .pad { padding-left: 20px; padding-right: 20px; }
 
 /* sidebar primary */
-.s1 { z-index: 2; background: #000; }
+.s1 { z-index: 2; }
 
 /*  base : grid
 /* ------------------------------------ */
@@ -590,15 +590,15 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.03); }
 
 /*  common : page title
 /* ------------------------------------ */
-.page-title { padding: 20px 40px; border-bottom: 1px solid #eee; }
+.page-title { padding: 20px 40px; border-top: 1px solid #eee; }
 .page-title-inner { }
 .page-title i { margin-right: 12px; }
 .page-title h1,
 .page-title h2,
 .page-title h3,
-.page-title h4 { font-size: 32px; line-height: 1.4em; font-weight: 600; }
-.page-title span { color: #999; font-weight: 300; }
-.page-title .notebox { font-size: 18px; font-weight: 300; margin-top: 10px; }
+.page-title h4 { font-size: 18px; text-transform: uppercase; line-height: 1.4em; font-weight: 400; border-left: 4px solid #000; padding-left: 30px; }
+.page-title span { color: #999; font-weight: 400; }
+.page-title .notebox { font-size: 16px; font-weight: 300; margin-top: 10px; }
 
 /*  common : notebox
 /* ------------------------------------ */
@@ -657,7 +657,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 /* ------------------------------------------------------------------------- */
 #wrapper { background: #fff; overflow: hidden; }
 #wrapper-inner { display: flex; }
-#header { background: #000; min-width: 320px; max-width: 320px; position: relative; z-index: 101; box-sizing: border-box; }
+#header { background: #000; min-width: 320px; max-width: 320px; position: relative; box-sizing: border-box; }
 .main { width: 100%; min-height: 100vh; }
 
 .s2 { background: #fff; position: relative; min-width: 90px; max-width: 90px; z-index: 99; }
@@ -670,13 +670,13 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .s2 .social-links .social-tooltip:active { background: rgba(0,0,0,0.15); box-shadow: inset 0 1px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(255,255,255,0.1), 0 1px 0 rgba(0,0,0,0.1), inset 0 0 10px rgba(255,255,255,0.3); border-radius: 10px; color: #000; text-decoration: none; }
 .s2 .social-links .social-tooltip:hover:after { background: #000; color: #fff; padding: 7px 10px; top: 14px; left: 50px; right: auto; }
 .s2 .social-links .social-tooltip:hover:before { top: 24px; left: 45px; right: auto; border-color: transparent #000; border-width: 5px 5px 5px 0; }
-.col-2cr .s2 .social-links .social-tooltip:hover:after { left: auto; right: 50px; }
-.col-2cr .s2 .social-links .social-tooltip:hover:before { left: auto; right: 45px; border-width: 5px 0 5px 5px; }
+.col-2cl .s2 .social-links .social-tooltip:hover:after { left: auto; right: 50px; }
+.col-2cl .s2 .social-links .social-tooltip:hover:before { left: auto; right: 45px; border-width: 5px 0 5px 5px; }
 
-.site-title { background: linear-gradient(90deg, #bd1d9d 0%, #d64141 100%); text-align: center; font-size: 36px; font-weight: 600; letter-spacing: -0.5px; line-height: 50px; padding: 17px 40px; position: relative; z-index: 2; }
+.site-title { text-align: center; font-size: 36px; font-weight: 600; letter-spacing: -0.5px; line-height: 50px; padding: 17px 40px; position: relative; z-index: 2; }
 .site-title a { display: block; color: #fff; max-width: 100%; }
 .site-title a img { display: block; margin: 0 auto; max-width: 100%; max-height: 50px; height: auto; padding: 0; -webkit-border-radius: 0; border-radius: 0; }
-.site-description { text-align: center; padding: 20px 40px; font-size: 16px; line-height: 1.6em; font-weight: 300; color: #888; position: relative; z-index: 2; }
+.site-description { text-align: center; padding: 0 40px 30px; font-size: 16px; line-height: 1.6em; font-weight: 300; color: #888; position: relative; z-index: 2; }
 .site-header { background: #eee; }
 .site-image { display: block; margin: 0 auto; max-height: 400px; }
 
@@ -688,12 +688,12 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 	.s2 .social-links .social-tooltip:hover { color: #fff; }
 }
 
-#profile { background: #161616; position: relative; margin-top: 60px; text-align: center; }
-#profile-inner { border-top: 1px solid #222; position: relative; padding: 90px 40px 40px; }
-#profile-image { background: #161616; border: 1px solid #222; margin-left: -71px; padding: 10px; width: 120px; height: 120px; display: block; border-radius: 100%; position: absolute; right: 50%; left: 50%; top: -70px; z-index: 2; }
+#profile { position: relative; text-align: center; }
+#profile-inner { position: relative; padding: 0 40px; }
+#profile-image { width: 200px; height: 200px; display: block; margin: 0 auto 40px; }
 #profile-image img { display: block; border-radius: 100%; }
-#profile-name { color: #fff; font-size: 22px; font-weight: 600; line-height: 1.2em; margin-bottom: 10px; }
-#profile-description { font-size: 16px; line-height: 1.6em; font-weight: 300; color: #777; position: relative; }
+#profile-name { color: #000; font-size: 24px; font-weight: 400; line-height: 1.2em; margin-bottom: 20px; }
+#profile-description { font-size: 20px; line-height: 1.5em; font-weight: 400; color: #777; position: relative; }
 #profile-description:before { content: ""; position: absolute; top: 0; right: 0; left: 0; height: 2px; }
 
 .post-comments { background: #000; font-size: 16px; font-weight: 600; line-height: 20px; color: #fff; display: block; position: absolute; top: 7px; right: 7px; z-index: 6; border-radius: 7px; }
@@ -728,9 +728,15 @@ body.search article.type-page .type-list-center.no-thumb { border-right: 0; widt
 body.search article.type-page .type-list-left,
 body.search article.type-page .type-list-right { display: none; }
 
+#wrapper { background: #fff; }
+#header { background: #fff; }
+.content { background: #f5f5f5; border-top: 1px solid #e5e5e5; border-radius: 10px; }
+.item-portfolio { width: 280px; display: flex; justify-content: center; align-items: center; overflow: hidden; }
+.item-portfolio img { display: block; }
+
 /*  header : search
 /* ------------------------------------ */
-.toggle-search { background: linear-gradient(90deg, #bd1d9d 0%, #d64141 100%); outline: none; border: 0; padding: 27px 0; width: 90px; color: #333; text-align: center; font-size: 20px; line-height: 24px; cursor: pointer; display: block; }
+.toggle-search { background: #fff; outline: none; border: 0; border-bottom: 1px solid #eee; padding: 27px 0; width: 90px; color: #000; text-align: center; font-size: 20px; line-height: 24px; cursor: pointer; display: block; }
 .toggle-search:hover {  }
 .toggle-search.active { background: linear-gradient(90deg, #bd1d9d 0%, #d64141 100%); }
 .toggle-search.active i:before { content: "\f00d"; }
@@ -740,7 +746,7 @@ body.search article.type-page .type-list-right { display: none; }
 .search-expand .themeform input { background: #fff; width: 100%; border: 1px solid #ddd; }
 .search-expand .themeform input:focus { border-color: #ccc; }
 .toggle-search.active { padding-top: 30px; padding-bottom: 29px; }
-.toggle-search .svg-icon { fill: #fff; margin: 0 auto; }
+.toggle-search .svg-icon { fill: #000; margin: 0 auto; }
 .toggle-search #svg-close { display: none; }
 .toggle-search.active #svg-search { display: none; }
 .toggle-search.active #svg-close { display: block; }
@@ -793,13 +799,13 @@ body.search article.type-page .type-list-right { display: none; }
 
 .nav-menu:not(.mobile) .menu { flex-wrap: wrap; justify-content: flex-start; }
 .nav-menu:not(.mobile) .menu ul.active,
-.nav-menu:not(.mobile) .menu li.hover > ul { overflow: visible; width: 180px; opacity: 1; transform: translateY(0); transition: opacity 0.15s linear, transform 0.15s linear; }
-.nav-menu:not(.mobile) .menu ul .sub-menu { left: 200px; top: 0; }
-.nav-menu:not(.mobile) .menu { position: relative; }
-.nav-menu:not(.mobile) .menu ul { font-size: 15px; opacity: 0; padding: 10px 0; position: absolute; top: calc(100% + 20px); transition: opacity 0.15s linear, transform 0.15s linear, right 0s 0.15s; transform: translateY(6px); z-index: 3; }
+.nav-menu:not(.mobile) .menu li.hover > ul { overflow: visible; width: 200px; opacity: 1; transform: translateY(0); transition: opacity 0.15s linear, transform 0.15s linear; }
+.nav-menu:not(.mobile) .menu ul .sub-menu { left: 220px; top: 0; }
+.nav-menu:not(.mobile) .menu { position: relative; text-transform: uppercase;  }
+.nav-menu:not(.mobile) .menu ul { font-size: 14px; opacity: 0; padding: 10px 0; position: absolute; top: calc(100% + 20px); transition: opacity 0.15s linear, transform 0.15s linear, right 0s 0.15s; transform: translateY(6px); z-index: 3; }
 .nav-menu:not(.mobile) .menu ul li { position: relative; }
 .nav-menu:not(.mobile) .menu ul a { display: block; padding: 7px 20px; transition: background-color 0.15s linear; width: 100%; }
-.nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul {	min-width: 180px; max-width: 180px; max-height: 300vh; overflow: visible; opacity: 1; transform: translateY(0); transition: opacity 0.15s linear, transform 0.15s linear; }
+.nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul {	min-width: 200px; max-width: 200px; max-height: 300vh; overflow: visible; opacity: 1; transform: translateY(0); transition: opacity 0.15s linear, transform 0.15s linear; }
 .nav-menu:not(.mobile) .menu li.menu-item-has-children.focus > ul:focus-within { opacity: 1!important; }
 .nav-menu:not(.mobile) .menu li ul.sub-menu:not(.active) { opacity: 0; }
 .nav-menu:not(.mobile) .menu li.hover ul.sub-menu:not(.active) { opacity: 1; }
@@ -829,7 +835,7 @@ body.search article.type-page .type-list-right { display: none; }
 .nav-menu.mobile ul { border: 0; }
 .nav-menu.mobile ul li .menu-item-wrapper { justify-content: space-between; width: 100%; }
 .nav-menu.mobile > div > ul > li:last-child { margin-bottom: 52px; }
-.nav-menu.mobile ul li a { font-size: 16px; font-weight: 600; padding: 14px 20px; }
+.nav-menu.mobile ul li a { font-size: 14px; font-weight: 600; padding: 14px 20px; }
 .nav-menu.mobile ul ul li a { font-size: 14px; }
 .nav-menu.mobile ul ul li a { padding: 12px 0 12px 40px; }
 .nav-menu.mobile ul ul ul li a { padding: 12px 0 12px 60px; }
@@ -838,13 +844,13 @@ body.search article.type-page .type-list-right { display: none; }
 /* menu styling */
 .nav-menu a { color: #fff; }
 .nav-menu .svg-icon { fill: #333; }
-.nav-menu:not(.mobile) { background: #fff; border-bottom: 1px solid #eee; }
+.nav-menu:not(.mobile) {  }
 .nav-menu:not(.mobile) .menu ul { background: #000; color: #fff; border-radius: 4px; }
 .nav-menu:not(.mobile) .menu ul:after { border-bottom-color: #000; }
 .nav-menu:not(.mobile) .menu ul ul:after { border-right-color: #000; }
 .nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:after { border-left-color: #000; }
 
-.nav-menu:not(.mobile) { background: linear-gradient(to bottom, #eee 0%,#fff 100%); font-size: 16px; font-weight: 600; float: none; padding: 16px 40px 30px 40px; }
+.nav-menu:not(.mobile) { font-size: 18px; font-weight: 400; float: none; padding: 16px 40px 30px 40px; }
 .nav-menu:not(.mobile) a { color: #000; }
 .nav-menu:not(.mobile) a:hover { color: #333; }
 .nav-menu:not(.mobile) ul ul a:hover { color: #ccc; }
@@ -863,7 +869,7 @@ body.search article.type-page .type-list-right { display: none; }
 .nav-menu:not(.mobile) li.current_page_item > span > a, 
 .nav-menu:not(.mobile) li.current-menu-item > span > a, 
 .nav-menu:not(.mobile) li.current-menu-ancestor > span > a, 
-.nav-menu:not(.mobile) li.current-post-parent > span > a { color: #dc3262; }
+.nav-menu:not(.mobile) li.current-post-parent > span > a { color: #b48248; }
 .nav-menu:not(.mobile) ul ul li.current_page_item > span > a, 
 .nav-menu:not(.mobile) ul ul li.current-menu-item > span > a, 
 .nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
