--- a/style.css
+++ b/style.css
@@ -596,7 +596,7 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.03); }
 .page-title h1,
 .page-title h2,
 .page-title h3,
-.page-title h4 { font-size: 18px; text-transform: uppercase; line-height: 1.4em; font-weight: 400; border-left: 4px solid #000; padding-left: 30px; }
+.page-title h4 { font-size: 17px; text-transform: uppercase; line-height: 1.4em; font-weight: 400; border-left: 4px solid #000; padding-left: 30px; }
 .page-title span { color: #999; font-weight: 400; }
 .page-title .notebox { font-size: 16px; font-weight: 300; margin-top: 10px; }
 
@@ -693,7 +693,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 #profile-image { width: 200px; height: 200px; display: block; margin: 0 auto 40px; }
 #profile-image img { display: block; border-radius: 100%; }
 #profile-name { color: #000; font-size: 24px; font-weight: 400; line-height: 1.2em; margin-bottom: 20px; }
-#profile-description { font-size: 20px; line-height: 1.5em; font-weight: 400; color: #777; position: relative; }
+#profile-description { font-size: 20px; line-height: 1.5em; font-weight: 300; color: #777; position: relative; }
 #profile-description:before { content: ""; position: absolute; top: 0; right: 0; left: 0; height: 2px; }
 
 .post-comments { background: #000; font-size: 16px; font-weight: 600; line-height: 20px; color: #fff; display: block; position: absolute; top: 7px; right: 7px; z-index: 6; border-radius: 7px; }
@@ -731,8 +731,25 @@ body.search article.type-page .type-list-right { display: none; }
 #wrapper { background: #fff; }
 #header { background: #fff; }
 .content { background: #f5f5f5; border-top: 1px solid #e5e5e5; border-radius: 10px; }
-.item-portfolio { width: 280px; display: flex; justify-content: center; align-items: center; overflow: hidden; }
-.item-portfolio img { display: block; }
+
+.type-portfolio { background: #fff; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); width: 320px; justify-content: center; align-items: center; overflow: hidden; }
+.type-portfolio img { display: block; }
+
+.type-portfolio-date { width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; border: 3px solid rgba(255,255,255,0.6); }
+.type-portfolio-date-month { font-weight: 600; }
+.type-portfolio-date-day { font-weight: 600; letter-spacing: -1px; font-size: 32px; margin: 2px; }
+.type-portfolio-date-year {}
+
+.type-portfolio-thumb { position: relative; }
+.type-portfolio-thumb:before { opacity: 0; background: url(img/image-gradient-reverse.png) repeat-x; background-size: 100% 100%; content: ""; position: absolute; display: block; height: 100%; width: 100%; bottom: 0; display: block; transition: all .4s ease; pointer-events: none; }
+.type-portfolio:hover .type-portfolio-thumb:before { opacity: 0.5; }
+.type-portfolio:hover .type-portfolio-date { top: 0; }
+.type-portfolio-content {  }
+.type-portfolio-title { padding: 10px 20px; font-weight: 600; }
+.type-portfolio-title a { color: #000; }
+.type-portfolio-category { color: #ccc; text-transform: uppercase; padding: 10px 20px; border-top: 1px solid #f1f1f1; }
+.type-portfolio-category a { color: #999; }
+.type-portfolio-category a:hover { color: #000; }
 
 /*  header : search
 /* ------------------------------------ */
@@ -850,7 +867,7 @@ body.search article.type-page .type-list-right { display: none; }
 .nav-menu:not(.mobile) .menu ul ul:after { border-right-color: #000; }
 .nav-menu-dropdown-left .nav-menu:not(.mobile) .menu ul ul:after { border-left-color: #000; }
 
-.nav-menu:not(.mobile) { font-size: 18px; font-weight: 400; float: none; padding: 16px 40px 30px 40px; }
+.nav-menu:not(.mobile) { font-size: 17px; font-weight: 400; float: none; padding: 16px 40px 30px 40px; }
 .nav-menu:not(.mobile) a { color: #000; }
 .nav-menu:not(.mobile) a:hover { color: #333; }
 .nav-menu:not(.mobile) ul ul a:hover { color: #ccc; }
