--- a/style.css
+++ b/style.css
@@ -570,8 +570,8 @@ embed, object, iframe { max-width: 100%; }
 
 /*  common : responsive image + caption
 /* ------------------------------------ */
-.image-container { position: relative; }
-.image-container img { display: block; width: 100%; height: auto; }
+.image-container { background: #e5e5e5; box-shadow: inset 0 0 2px rgba(0,0,0,0.1); position: relative; }
+.image-container img { display: block; max-width: 100%; height: auto; margin: 0 auto; }
 .image-caption { background: rgba(0,0,0,0.7); color: #fff; font-size: 13px; line-height: 1.3em; font-style: italic; padding: 8px 10px; position: absolute; bottom: 8px; left: 8px; margin-right: 8px;
 -webkit-border-radius: 2px; border-radius: 2px; 
 -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.03);
@@ -599,6 +599,11 @@ box-shadow: inset 0 1px 1px rgba(0,0,0,0.4), 0 1px 0 rgba(255,255,255,0.03); }
 .page-title h4 { font-size: 17px; text-transform: uppercase; line-height: 1.4em; font-weight: 400; border-left: 4px solid #000; padding-left: 30px; }
 .page-title span { color: #999; font-weight: 400; }
 .page-title .notebox { font-size: 16px; font-weight: 300; margin-top: 10px; }
+.single .page-title span { margin-left: 10px; }
+.single .page-title h1,
+.single .page-title h2,
+.single .page-title h3,
+.single .page-title h4 { color: #999; }
 
 /*  common : notebox
 /* ------------------------------------ */
@@ -696,37 +701,13 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 #profile-description { font-size: 20px; line-height: 1.5em; font-weight: 300; color: #777; position: relative; }
 #profile-description:before { content: ""; position: absolute; top: 0; right: 0; left: 0; height: 2px; }
 
-.post-comments { background: #000; font-size: 16px; font-weight: 600; line-height: 20px; color: #fff; display: block; position: absolute; top: 7px; right: 7px; z-index: 6; border-radius: 7px; }
-.post-comments > span { display: block; position: relative; padding: 8px 8px; }
-.post-comments > span:before { content:''; position: absolute; left: -11px; bottom: 13px; border-style: solid; border-width: 6px; border-color: transparent #000 transparent transparent; }
+.post-comments { background: #000; font-size: 14px; font-weight: 600; line-height: 20px; color: #fff; display: block; position: absolute; top: 7px; right: 7px; z-index: 6; border-radius: 7px; }
+.post-comments > span { display: block; position: relative; width: 30px; text-align: center; padding: 4px 4px; }
+.post-comments > span:before { content:''; position: absolute; left: -11px; bottom: 9px; border-style: solid; border-width: 6px; border-color: transparent #000 transparent transparent; }
 .post-comments:hover { color: #fff; opacity: 0.75; }
 
 .content-inner { background: #f5f5f5; border-radius: 10px; box-sizing: border-box; padding: 10px; }
 .content-inner > article { background: #fff; border-radius: 10px; margin-bottom: 20px; max-width: 920px; margin-left: auto; margin-right: auto; }
-
-.article-type-list { display: flex; margin: 0 auto; border: 1px solid #eee; border-bottom-color: #ddd; border-radius: 10px; }
-.type-list-left { width: 20%; position: relative; float: left; }
-.type-list-center { width: 55%; position: relative; float: left; box-sizing: border-box; padding: 15px 30px 0 30px; border-right: 1px solid #eee; border-left: 1px solid #f1f1f1; }
-.type-list-center.no-thumb { width: 75%; border-left: 0; }
-.type-list-right { flex: 1 1 0; width: 25%; position: relative; float: left; box-sizing: border-box; padding: 30px 30px 90px 30px; border-radius: 0 10px 10px 0; }
-.type-list-right .post-comments { bottom: 30px; right: 30px; top: auto; }
-.type-list-right .more-link { border: 2px solid #dc3262; color: #dc3262; text-transform: uppercase; font-size: 13px; font-weight: 600; display: block; position: absolute; left: 30px; bottom: 30px; padding: 5px 14px; border-radius: 10px; }
-.type-list-right .more-link:hover { color: #000; border-color: #000; } 
-.type-list-date { font-size: 18px; font-weight: 400; line-height: 1.4em; color: #999; margin-bottom: 10px; }
-.type-list-category { color: #bbb; }
-.type-list-category a { color: #dc3262; font-weight: 600; }
-.type-list-category a:hover { color: #000; }
-.type-list-thumbnail { display: block; overflow: hidden; margin: 16px; border-radius: 6px; }
-.type-list-content {}
-.type-list-title { font-size: 30px; margin: 10px 0 20px; font-weight: 600; line-height: 1.3em; letter-spacing: -0.5px; }
-.type-list-title a { color: #000; position: relative; box-shadow: 0 2px 0 #dc3262; }
-.type-list-title a:hover { color: #000;  box-shadow: 0 2px 0 #000; } 
-.type-list-excerpt { font-size: 17px; line-height: 1.6em; color: #999; font-weight: 300; margin-bottom: 30px; }
-
-body.search article.type-page .type-list-center,
-body.search article.type-page .type-list-center.no-thumb { border-right: 0; width: 100%; }
-body.search article.type-page .type-list-left,
-body.search article.type-page .type-list-right { display: none; }
 
 #wrapper { background: #fff; }
 #header { background: #fff; }
@@ -735,19 +716,21 @@ body.search article.type-page .type-list-right { display: none; }
 .type-portfolio { background: #fff; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); width: 320px; justify-content: center; align-items: center; overflow: hidden; }
 .type-portfolio img { display: block; }
 
-.type-portfolio-date { width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; border: 3px solid rgba(255,255,255,0.6); }
+.type-portfolio-date { width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; border: 3px solid rgba(255,255,255,0.4); }
 .type-portfolio-date-month { font-weight: 600; }
 .type-portfolio-date-day { font-weight: 600; letter-spacing: -1px; font-size: 32px; margin: 2px; }
 .type-portfolio-date-year {}
+
+.type-portfolio-comments { width: 50px; height: 44px; margin: 10px; transition: all 0.3s ease; position: absolute; bottom: -5px; right: 0; }
 
 .type-portfolio-thumb { position: relative; }
 .type-portfolio-thumb:before { opacity: 0; background: url(img/image-gradient-reverse.png) repeat-x; background-size: 100% 100%; content: ""; position: absolute; display: block; height: 100%; width: 100%; bottom: 0; display: block; transition: all .4s ease; pointer-events: none; }
 .type-portfolio:hover .type-portfolio-thumb:before { opacity: 0.5; }
 .type-portfolio:hover .type-portfolio-date { top: 0; }
 .type-portfolio-content {  }
-.type-portfolio-title { padding: 10px 20px; font-weight: 600; }
+.type-portfolio-title { padding: 10px 20px; font-weight: 600; font-size: 17px; line-height: 1.5em; }
 .type-portfolio-title a { color: #000; }
-.type-portfolio-category { color: #ccc; text-transform: uppercase; padding: 10px 20px; border-top: 1px solid #f1f1f1; }
+.type-portfolio-category { font-size: 13px; color: #ccc; text-transform: uppercase; padding: 10px 20px; border-top: 1px solid #f1f1f1; }
 .type-portfolio-category a { color: #999; }
 .type-portfolio-category a:hover { color: #000; }
 
@@ -755,10 +738,10 @@ body.search article.type-page .type-list-right { display: none; }
 /* ------------------------------------ */
 .toggle-search { background: #fff; outline: none; border: 0; border-bottom: 1px solid #eee; padding: 27px 0; width: 90px; color: #000; text-align: center; font-size: 20px; line-height: 24px; cursor: pointer; display: block; }
 .toggle-search:hover {  }
-.toggle-search.active { background: linear-gradient(90deg, #bd1d9d 0%, #d64141 100%); }
+.toggle-search.active { background: #f1f1f1; }
 .toggle-search.active i:before { content: "\f00d"; }
-.search-expand { display: none; background: #d64141; padding: 23px 30px 23px 0; position: absolute; top: 0; left: 90px; width: 310px; z-index: 10; }
-.col-2cr .search-expand { background: #bd1d9d; padding-left: 30px; padding-right: 0; left: auto; right: 90px; }
+.search-expand { display: none; background: #f1f1f1; padding: 23px 30px 23px 0; position: absolute; top: 0; left: 90px; width: 290px; z-index: 10; }
+.col-2cl .search-expand { background: #f1f1f1; padding-left: 30px; padding-right: 0; left: auto; right: 90px; }
 .search-expand-inner {  }
 .search-expand .themeform input { background: #fff; width: 100%; border: 1px solid #ddd; }
 .search-expand .themeform input:focus { border-color: #ccc; }
@@ -977,7 +960,7 @@ body.search article.type-page .type-list-right { display: none; }
 /* ------------------------------------------------------------------------- */
 .sticky {}
 .content > article { padding: 20px; }
-.post-wrapper { background: #fff; border: 1px solid #eee; border-radius: 10px; margin: 0 auto; width: 100%; overflow: hidden; }
+.post-wrapper { background: #fff; border: 1px solid #eee; margin: 0 auto; width: 100%; overflow: hidden; }
 
 .entry-header,
 .entry-media,
@@ -985,7 +968,7 @@ body.search article.type-page .type-list-right { display: none; }
 .entry-content { padding-right: 40px; padding-left: 40px; padding-bottom: 40px; }
 
 .entry-header { margin: 40px auto 20px; position: relative; }
-.entry-header .entry-title { font-weight: 600; font-size: 38px; line-height: 1.3em; letter-spacing: -1px; margin-bottom: 20px; }
+.entry-header .entry-title { font-weight: 600; font-size: 32px; line-height: 1.3em; letter-spacing: -1px; margin-bottom: 20px; }
 .entry-header .entry-title a { color: #000; }
 .entry-header .entry-title a:hover { color: #000; }
 .entry-header .entry-meta { font-size: 18px; font-weight: 400; line-height: 1.4em; color: #999;; }
