--- a/style.css
+++ b/style.css
@@ -712,7 +712,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 .type-portfolio { background: #333; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); width: 320px; justify-content: center; align-items: center; overflow: hidden; }
 .type-portfolio img { display: block; }
-.type-portfolio-date { width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; border: 3px solid rgba(255,255,255,0.4); }
+.type-portfolio-date { background: rgba(0,0,0,0.2); padding: 4px 0; width: 50px; transition: all 0.3s ease; color: #fff; text-transform: uppercase; text-align: center; position: absolute; right: 0; top: -100px; margin: 10px; }
 .type-portfolio-date-month { font-weight: 600; }
 .type-portfolio-date-day { font-weight: 600; letter-spacing: -1px; font-size: 32px; margin: 2px; }
 .type-portfolio-date-year {}
@@ -916,9 +916,23 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .front-widgets .widget > h3 {  }
 
 
-.featured-item { height: 600px; background-size: cover; }
-.featured-item-left { background: green; width: 50%; float: left; }
-.featured-item-right { background: blue; width: 50%; float: left; }
+.featured-item { height: 600px; margin-bottom: 20px; }
+.featured-item-left { background: #333; height: 100%; width: 50%; float: left; box-sizing: border-box; position: relative; }
+.featured-item-right { background: blue; height: 100%; width: 50%; float: left; position: relative; }
+.featured-item-right:hover .type-portfolio-date { top: 0; }
+.featured-item-right:before { opacity: 0; background: url(img/image-gradient-reverse.png) repeat-x; background-size: 100% 100%; content: ""; position: absolute; display: block; height: 100%; width: 100%; bottom: 0; display: block; transition: all .4s ease; pointer-events: none; }
+.featured-item-right:hover:before { opacity: 0.5; }
+.featured-item-right .featured-item-link { position: absolute; left: 0; right: 0; top: 0; bottom: 0; }
+
+.featured-item-bottom { border-top: 1px solid #444; position: absolute; bottom: 0; left: 0; right: 0; padding: 60px; }
+.featured-item-avatar { background: #222; width: 80px; height: auto; padding: 6px; border: 1px solid #444; border-radius: 100%; position: absolute; top: -46px; left: 60px; }
+.featured-item-avatar img { border-radius: 100%; } 
+.featured-item-title { font-size: 62px; letter-spacing: -1px; font-weight: 300; line-height: 1.2em; margin-bottom: 20px; }
+.featured-item-title a { color: #fff; }
+.featured-item-category { font-size: 18px; color: #666; text-transform: uppercase; margin-bottom: 30px; }
+.featured-item-category a { color: #999; }
+.featured-item-category a:hover { color: #fff; }
+.featured-item-excerpt { color: #999; font-size: 18px; line-height: 1.6em; }
 
 .slick-posts-wrap-outer { display: none; /* before loading */ border-bottom: 1px solid #333; margin-bottom: 40px; }
 .slick-posts-wrap { padding: 20px 20px 0; box-sizing: border-box; }
