--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* ------------------------------------------------------------------------- *
  *  Base Styles
 /* ------------------------------------------------------------------------- */
-body { background: #f5f5f5; font-size: 15px; line-height: 1.5em; color: #444; font-weight: 300; }
+body { background: #f5f5f5; font-size: 15px; line-height: 1.5em; color: #ccc; font-weight: 300; }
 ::selection { background: #333; color: #fff; }
 ::-moz-selection { background: #333; color: #fff; }
 a { color: #fff; text-decoration: none; }
@@ -570,7 +570,7 @@ embed, object, iframe { max-width: 100%; }
 
 /*  common : responsive image + caption
 /* ------------------------------------ */
-.image-container { background: #e5e5e5; box-shadow: inset 0 0 2px rgba(0,0,0,0.1); position: relative; }
+.image-container { background: #161616; box-shadow: inset 0 0 2px rgba(0,0,0,0.1); position: relative; }
 .image-container img { display: block; max-width: 100%; height: auto; margin: 0 auto; }
 .image-caption { background: rgba(0,0,0,0.7); color: #fff; font-size: 13px; line-height: 1.3em; font-style: italic; padding: 8px 10px; position: absolute; bottom: 8px; left: 8px; margin-right: 8px;
 -webkit-border-radius: 2px; border-radius: 2px; 
@@ -1017,7 +1017,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 /* ------------------------------------------------------------------------- */
 .sticky {}
 .content > article { padding: 20px; }
-.post-wrapper { background: #fff; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); margin: 0 auto; width: 100%; overflow: hidden; }
+.post-wrapper { background: #333; box-shadow: 0 10px 10px rgba(0,0,0,0.03), 0 1px 0 rgba(0,0,0,0.05); margin: 0 auto; width: 100%; overflow: hidden; }
 
 .entry-header,
 .entry-media,
@@ -1025,7 +1025,7 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 .entry-content { padding-right: 40px; padding-left: 40px; padding-bottom: 40px; }
 
 .entry-header { margin: 40px auto 20px; position: relative; }
-.entry-header .entry-title { font-weight: 600; font-size: 32px; line-height: 1.3em; letter-spacing: -1px; margin-bottom: 20px; }
+.entry-header .entry-title { font-weight: 300; font-size: 42px; line-height: 1.3em; letter-spacing: -0.5px; }
 .entry-header .entry-title a { color: #000; }
 .entry-header .entry-title a:hover { color: #000; }
 .entry-header .entry-meta { font-size: 18px; font-weight: 400; line-height: 1.4em; color: #999;; }
@@ -1047,19 +1047,19 @@ box-shadow: 0 0 2px rgba(255,255,255,0.4);
 
 /*  single : sharrre header
 /* ------------------------------------ */
-.sharrre-header { background: #fff; border-bottom: 1px solid #eee; margin: 0 0 20px; overflow: hidden; }
+.sharrre-header { border-bottom: 1px solid #444; margin: 0 0 20px; overflow: hidden; }
 .sharrre-header > span { display: none; }
 .sharrre-header .post-sharrre { margin-top: 30px; }
 .sharrre-header .sharrre { width: 25%; float: left; }
-.sharrre-header .sharrre .box { display: block; padding: 10px 14px 10px 10px; border-left: 1px solid #eee; }
+.sharrre-header .sharrre .box { display: block; padding: 10px 14px 10px 10px; border-left: 1px solid #444; }
 .sharrre-header .sharrre#twitter .box { border-left: 0; }
-.sharrre-header .sharrre .count { width: 60%; margin-left: 10%; background: #eee; color: #fff; display: block; font-size: 15px; font-weight: 900; line-height: 30px; position: relative; text-align: center; border-radius: 6px; }
-.sharrre-header .sharrre .count:after { display: block; content:''; position: absolute; right: -12px; width: 0; height: 0; border: solid 6px transparent; border-left-color: #eee; bottom: 9px; }
+.sharrre-header .sharrre .count { width: 60%; margin-left: 10%; background: #222; color: #fff; display: block; font-size: 15px; font-weight: 900; line-height: 30px; position: relative; text-align: center; border-radius: 6px; }
+.sharrre-header .sharrre .count:after { display: block; content:''; position: absolute; right: -12px; width: 0; height: 0; border: solid 6px transparent; border-left-color: #222; bottom: 9px; }
 .sharrre-header .sharrre .share { width: 20%; margin-left: 10%; display: block; font-size: 24px; font-weight: 600; line-height: 32px; padding: 0; text-align: center; text-decoration: none; }
 .sharrre-header .sharrre .share,
 .sharrre-header .sharrre .count,
 .sharrre-header .sharrre .count:after { float: left; -webkit-transition: all .3s ease; transition: all .3s ease; }
-.sharrre-header .sharrre .box:hover { background: #fff!important; }
+.sharrre-header .sharrre .box:hover { background: #333!important; }
 .sharrre-header .sharrre .box:hover .share {}
 .sharrre-header .sharrre .box:hover .count { color: #fff!important; }
 
